tests/fail/nightly/missing_bracket.rs
fn main() {
    sscanf::sscanf!("hi", "asdf{asdf");
    sscanf::sscanf!("hi", "asdf}asdf");
}
