tests/fail/nightly/missing_bracket.stderr
error: missing '}' to close a placeholder. If the '{' was intended to be a literal, escape it with '{{'
 --> tests/fail/nightly/missing_bracket.rs:2:32
  |
2 |     sscanf::sscanf!("hi", "asdf{asdf");
  |                                ^^^^^

error: Unexpected standalone '}'. Literal '}' need to be escaped as '}}'
 --> tests/fail/nightly/missing_bracket.rs:3:32
  |
3 |     sscanf::sscanf!("hi", "asdf}asdf");
  |                                ^
